--- a/WorkoutPlanner/WorkoutPlanner.csproj
+++ b/WorkoutPlanner/WorkoutPlanner.csproj
@@ -102,7 +102,16 @@
     <Compile Include="WorkoutSongForm.Designer.cs">
       <DependentUpon>WorkoutSongForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="WorkoutTemplate.cs" />
     <Compile Include="WorkoutType.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Templates\Ki-Box75min.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Templates\Workout75min.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
